新增菜品业务

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,8 @@ sky:
     database: sky_take_out
     username: root
     password: 085258
+  alioss:
+    endpoint: oss-cn-beijing.aliyuncs.com
+    access-key-id: LTAI5tQFHSjHVC7RRsJ6iMBh
+    access-key-secret: 6E9N6ST4YYqONTjHcpd1QAUXcXN258
+    bucket-name: sky-itcast-ppx
