店铺营业状态代码开发

--- a/sky-server/pom.xml
+++ b/sky-server/pom.xml
@@ -86,6 +86,7 @@
             <artifactId>knife4j-spring-boot-starter</artifactId>
         </dependency>
 
+        <!--Redis-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
@@ -115,6 +116,9 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
         </dependency>
+
+
+
     </dependencies>
 
     <build>
